syntax = "proto3";

package updog.v1;

option go_package = "github.com/akrennmair/updog/proto/updog/v1";

service QueryService {
	rpc Query(QueryRequest) returns (QueryResponse);
}

message QueryRequest {
	repeated Query queries = 1;
}

message QueryResponse {
	repeated Result results = 1;
}

message Query {
	int32 id = 1;

	message Expression {
		message Equal {
			string column = 1;
			string value = 2;
			int32 placeholder = 3;
		}

		message Not {
			Expression expr = 1;
		}

		message And {
			repeated Expression exprs = 1;
		}

		message Or {
			repeated Expression exprs = 1;
		}

		oneof value {
			Equal eq = 1;
			Not not = 2;
			And and = 3;
			Or or = 4;
		}
	}

	Expression expr = 2;
	repeated string group_by = 3;
}

message Result {
	int32 query_id = 1;
	uint64 total_count = 2;

	message Group {
		message ResultField {
			string column = 1;
			string value = 2;
		}

		repeated ResultField fields = 1;
		uint64 count = 2;
	}

	repeated Group groups = 3;
}

